apps/base/newapi/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: newapi
  labels:
    app: newapi
spec:
  serviceName: newapi-headless
  replicas: 1
  selector:
    matchLabels:
      app: newapi
  template:
    metadata:
      labels:
        app: newapi
    spec:
      containers:
      - name: newapi
        image: calciumion/new-api:v1.0.0-rc.7
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/status
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/status
            port: http
          initialDelaySeconds: 10
          periodSeconds: 20
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
