apps/base/newapi/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: newapi-headless
  labels:
    app: newapi
spec:
  clusterIP: None
  selector:
    app: newapi
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
