apps/base/newapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newapi
  labels:
    app: newapi
spec:
  selector:
    app: newapi
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
